# agents

./: .gitignore  ACTIONS.md  PLAN.md  README.md  bootstrap-laptop.sh  config.yaml  install-all.sh  mkdocs.yml  new-project-agents.sh  pytest.ini  ruff.toml
_archived/: migration-manifest-2026-05-09.md
action/: cli.py
claude-config/: CLAUDE.md  README.md  cost-telemetry-email.example.json  install.sh  new-project-claude.sh  settings.json  settings.local.json  statusline.py
code-review/: README.md  install-hook.sh  review.py
codex-config/: AGENTS.md  README.md  hooks.json  install.sh
daily-standup/: config.py  standup.py
dashboard/: cli.py
decision/: cli.py
docs/: AGENT-CAPABILITIES.md  AGENTIC_ENGINEERING_EXTRACTION_PROMPT.md  AGENTIC_ENGINEERING_TRAINING.md  AGENTIC_ENGINEERING_WORKFLOW.md  CLAUDE-CODEX-COLLABORATION.md  CLAUDE-SETUP.md  CONFIG-BOOTSTRAP.md  CONTRIBUTING_POLICY.md  (+13 more)
mcp-server/: README.md  pyproject.toml  server.py
mcp-server/patterns/: alembic-migration.yaml  annotated-deps.yaml  auth-context.yaml  base-repository.yaml  behavioral-evals.yaml  codex-delegation.yaml  core-failure-patterns.yaml  dev-scripts.yaml  dnd-kit-schedule.yaml  domain-exceptions.yaml  fastapi-module.yaml  git-workflow.yaml  implementation-routing.yaml  jwt-auth.yaml  nested-read-schemas.yaml  optimistic-concurrency.yaml  pagination-response.yaml  react-query-hook.yaml  schema-trio.yaml  websocket-singleton.yaml
mcp-server/tools/: __init__.py  agent_metrics.py  failure_patterns.py  patterns.py  vault_common.py  vault_dashboard.py  vault_search.py  vault_status.py
(+559 files in other folders)
