[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-mcp-server"
version = "0.1.0"
description = "MCP server for Obsidian vault access and agent metrics"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]
